#! /usr/bin/env python
##########################################################################
# Copyright (C) CEA, 2016 - 2022
# Distributed under the terms of the CeCILL-B license, as published by
# the CEA-CNRS-INRIA. Refer to the LICENSE file or to
# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.html
# for details.
##########################################################################

[project]
name = "GWAS_annotation"
version = "0.0.1"
authors = [
  { name="Antoine Dufournet", email="antoine.dufournet@cea.fr" },
]
description = "A package to study GWAS results"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CeCILL"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Dufouranto0/2025_GWAS_annotation"
Issues = "https://github.com/Dufouranto0/2025_GWAS_annotation/issues"